k8s/deployment/k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      identifier: nodejs-pod
      app.kubernetes.io/name: node-sample-1
  template:
    metadata:
      labels:
        identifier: nodejs-pod
        app.kubernetes.io/name: node-sample-1
    spec:
      containers:
        - name: node-sample
          image: bhushankumar3/kubernetes-cluster-nodejs:latest
          ports:
            - containerPort: 3000
