k8s/deployment/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernets.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          serviceName: nodejs-service-cluster-ip
          servicePort: "3000"
