k8s/deployment/kubernets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernets.io/ingress.class: nginx
    nginx.ingress.kubernets.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: nodejs-service-cluster
              servicePort: 3000
